<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorWhite">

    <androidx.cardview.widget.CardView
        app:cardBackgroundColor="@color/colorWhite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:orientation="vertical"
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:text="@string/textView_sure"
                android:textSize="14sp"
                android:textColor="@color/colorText"
                android:textStyle="bold"
                android:gravity="center"
                android:padding="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <View
                android:background="@android:color/darker_gray"
                android:layout_width="match_parent"
                android:layout_height="0.75dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView_cancel"
                    android:text="@string/textView_cancel"
                    android:textSize="12sp"
                    android:textColor="@color/colorText"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:padding="8dp"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp" />

                <View
                    android:background="@android:color/darker_gray"
                    android:layout_width="0.75dp"
                    android:layout_height="40dp" />

                <TextView
                    android:id="@+id/textView_deleteAcc"
                    android:text="@string/textView_deleteAcc"
                    android:textSize="12sp"
                    android:textColor="@color/colorText"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:padding="8dp"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>