<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/layout_bottomSheet"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/layout_fromCamera"
        android:orientation="horizontal"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            app:srcCompat="@drawable/ic_baseline_camera_alt_24"
            app:tint="@color/colorPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/textView_fromCam"
            android:textSize="12sp"
            android:textColor="@color/colorText"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginStart="8dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp" />

    </LinearLayout>

    <View
        android:background="@android:color/darker_gray"
        android:layout_width="match_parent"
        android:layout_height="0.75dp" />

    <LinearLayout
        android:id="@+id/layout_fromGallery"
        android:orientation="horizontal"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            app:srcCompat="@drawable/ic_baseline_image_24"
            app:tint="@color/colorPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/textView_fromGal"
            android:textSize="12sp"
            android:textColor="@color/colorText"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginStart="8dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp" />

    </LinearLayout>

    <View
        android:background="@android:color/darker_gray"
        android:layout_width="match_parent"
        android:layout_height="0.75dp" />

    <LinearLayout
        android:id="@+id/layout_logout"
        android:orientation="horizontal"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            app:srcCompat="@drawable/ic_baseline_exit_to_app_24"
            app:tint="@color/colorPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/textView_logout"
            android:textSize="12sp"
            android:textColor="@color/colorText"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginStart="8dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp" />

    </LinearLayout>

    <View
        android:background="@android:color/darker_gray"
        android:layout_width="match_parent"
        android:layout_height="0.75dp" />

    <LinearLayout
        android:id="@+id/layout_deleteAccount"
        android:orientation="horizontal"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            app:srcCompat="@drawable/ic_baseline_delete_24"
            app:tint="@color/colorRed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/textView_deleteAcc"
            android:textSize="12sp"
            android:textColor="@color/colorRed"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginStart="8dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp" />

    </LinearLayout>

</LinearLayout>